fixed spacings and added Reveal to footer

--- a/eztech/src/components/ContactUs.css
+++ b/eztech/src/components/ContactUs.css
@@ -12,7 +12,7 @@
 .message-bg {
   padding: 50px;
   border-radius: 16px;
-  box-shadow: 16px 18px 10px rgba(0, 0, 0, 0.08);
+  box-shadow: 14px 18px 10px rgba(0, 0, 0, 0.07);
 }
 
 .contact-images {
@@ -27,10 +27,6 @@
 .contact-text .main {
   font-size: 24px;
   margin-bottom: 40px;
-}
-
-.margin-form {
-  margin-bottom: 12px;
 }
 
 @media (max-width: 991px) {
